Your descriptive commit message here

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <li class="nav-item"><a href="./checkBookings.html" class="nav-link">
                             <i class='bx bx-check-circle'></i> My Bookings</a></li>
                     <li class="nav-item"><a href="./manageBookings.html" class="nav-link">
-                            <i class='bx bx-cog'></i> Manage Bookings</a></li>
+                            <i class='bx bx-cog'></i> hiManage Bookings</a></li>
                 </ul>
                 <div class="login">Log in</div>
             </nav>
