--- a/pages/Login.html
+++ b/pages/Login.html
@@ -12,36 +12,43 @@
         rel="stylesheet">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="./Login.css">
+    <link rel="stylesheet" href="../Style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
-    <div id="loginModal" class="modal">
-        <div class="transparentlayer"></div>
+    <div id="login-modal" class="modal">
+        <!-- Modal Overlay for background fade effect -->
+        <div class="modal-overlay"></div>
 
-        <div class="modal-content">
-            <div class="signin-Menu" id="signin-Menu" style="display: flex;">
+        <!-- Modal Container -->
+        <div class="modal-container">
+            <!-- Sign-In Section -->
+            <div class="signin-section" id="signin-section" style="display: flex;">
                 <div>
                     <h1>Welcome back!</h1>
                     <span>Seamless train ticket booking, right at your fingertips with RailEvate.</span>
                 </div>
 
-                <div class="input-info">
-                    <div class="input-box">
-                        <input type="text" placeholder="Username" class="signin-input signin-username">
-                        <input type="password" placeholder="Password" class="signin-input signin-password">
+                <div class="form-content">
+                    <div class="input-container">
+                        <!-- Username and Password Fields -->
+                        <input type="text" placeholder="Username" class="form-input signin-username">
+                        <input type="password" placeholder="Password" class="form-input signin-password">
+                        <!-- Link for Password Recovery -->
                         <a href="/forgot-password" class="forgot-password-link">Forgot Password?</a>
                     </div>
-                    <div class="input-button">
-                        <button type="button" class="signin-button">SignIn</button>
-                        <button type="button" class="signup-button" id="signup-toggle">SignUp</button>
+                    <div class="button-container">
+                        <!-- Sign In and Sign Up Buttons -->
+                        <button type="button" class="btn signin-btn" id="signin-submit-btn">Sign In</button>
+                        <button type="button" class="btn signup-btn" id="signup-toggle-btn">Sign Up</button>
                         <div class="separator">
                             <hr>
                             <span>or continue with</span>
                             <hr>
                         </div>
-                        <div class="external-sigin">
+                        <!-- Social Sign-In Options -->
+                        <div class="social-signin">
                             <div><img src="../images/g.png" alt="Google"></div>
                             <div><img src="../images/w.png" alt="Windows"></div>
                             <div><img src="../images/f.png" alt="Facebook"></div>
@@ -50,28 +57,32 @@
                 </div>
             </div>
 
-            <div class="signup-Menu" id="signup-Menu" style="display: none;">
+            <!-- Sign-Up Section -->
+            <div class="signup-section" id="signup-section" style="display: none;">
                 <div>
                     <h1>Join the Journey!</h1>
                     <span>Join us for hassle-free travel.</span>
                 </div>
 
-                <div class="input-info">
-                    <div class="input-box">
-                        <input type="email" placeholder="Email" class="signup-input signup-Email">
-                        <input type="password" placeholder="Password " class="signup-input signup-password">
+                <div class="form-content">
+                    <div class="input-container">
+                        <!-- Email and Password Fields for Sign-Up -->
+                        <input type="email" placeholder="Email" class="form-input signup-email">
+                        <input type="password" placeholder="Password" class="form-input signup-password">
                         <input type="password" placeholder="Confirm Password"
-                            class="signup-input signup-confirm-password">
+                            class="form-input signup-confirm-password">
                     </div>
-                    <div class="input-button">
-                        <button type="button" class="signin-back" id="signin-back-toggle">Back</button>
-                        <button type="button" class="signup-button" id="signup-button">SignUp</button>
+                    <div class="button-container">
+                        <!-- Back and Submit Buttons for Sign-Up -->
+                        <button type="button" class="btn back-btn" id="signin-back-toggle">Back</button>
+                        <button type="button" class="btn signup-submit-btn" id="signup-submit-button">Sign Up</button>
                         <div class="separator">
                             <hr>
                             <span>or continue with</span>
                             <hr>
                         </div>
-                        <div class="external-sigin">
+                        <!-- Social Sign-Up Options -->
+                        <div class="social-signin">
                             <div><img src="../images/g.png" alt="Google"></div>
                             <div><img src="../images/w.png" alt="Windows"></div>
                             <div><img src="../images/f.png" alt="Facebook"></div>
@@ -80,21 +91,15 @@
                 </div>
             </div>
 
-
-
-            <div class="Login-hero">
-                <span class="close" onclick="closeModal()">&times;</span>
-                <img src="../images/login.png" alt="Login image">
+            <!-- Modal Image Section for Decorative Image and Close Button -->
+            <div class="modal-image-section">
+                <span class="close-btn" onclick="window.location.href = '../index.html';">&times;</span>
+                <img src="../images/login.png" alt="Login">
             </div>
         </div>
     </div>
 
-    <div id="BookTicket" class="BookTicket">
-
-    </div>
-
-
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
 </body>
 
 </html>
